# ai-it-team

./: MANIFEST.md  README.md  config.yml  extract.sh  pyproject.toml  run.sh
docs/: STAGE0.md  STAGE1.md  STAGE10_SCOUT_FACTS_ONLY.md  STAGE11_EVIDENCE_EXTRACTION_AND_SCOUT_GUARD.md  STAGE12_RETRY_AWARE_QA_GUARDS.md  STAGE13_REQUIRED_CI_TOOLING_GAPS.md  STAGE14_RETRY_AWARE_PUBLISHER_GUARDS.md  STAGE15_REPOSITORY_PROVIDED_RUNTIME_SCRIPTS.md  STAGE16_POLICY_DRIVEN_TEAM_LEAD.md  STAGE17_PUBLISHER_PR_CHECKS.md  STAGE18_PUBLISHER_GH_CLI.md  STAGE19_PUBLISHER_CURL_CREATE_GH_CHECKS.md  STAGE2.md  STAGE20_POLICY_QA_AND_PUBLISHER_CHECKS.md  STAGE21_POLICY_WAIVERS_AND_STRUCTURED_REPORTS.md  STAGE22_VALIDATION_PROFILE_STRICT_REPORTS_AND_FEEDBACK_LOOP.md  STAGE23_RICH_REALTIME_UI.md  STAGE24_RICH_LIVE_EVENTS_COMPACT_PROMPT.md  STAGE3_TEAM_LEAD.md  STAGE4_FAILURE_ACCOUNTING.md  STAGE6_TOOLLESS_TEAM_LEAD.md  STAGE7_QA_VALIDATION.md  STAGE9_VALIDATION_ENVIRONMENT_RECONSTRUCTION.md
tests/: conftest.py  test_cli_conversation_commands.py  test_client_payload.py  test_graph_metrics.py  test_langgraph_stage1.py  test_langgraph_stage2.py  test_openhands_mock_server.py  test_pydantic_contracts.py  test_role_catalog_work_order_policy.py  test_role_model_config.py  test_role_policy.py  test_sandbox_commands.py  test_sandbox_reuse.py  test_sdk_abstractions.py  test_stage0_contract.py  test_stage10_scout_facts_only_postprocess.py  test_stage17_publisher_pr_checks.py  test_stage19_publisher_split_contract.py  test_stage21_policy_waivers_and_reports.py  test_stage23_rich_ui.py  (+5 more)
(+27 files in other folders)
